<resources>
    <string name="app_name">Fall And Stress Monitor</string>
    <string name="registerhere">RegisterHere</string>
    <string name="user_name">Username</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="LucNothing" />
    <string name="registrati_qui">Registrati Qui</string>
    <string name="todo">TODO</string>
    <string name="Nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="scegli_password">Scegli Password</string>
    <string name="telefono">Telefono</string>
    <string name="registrati">Registrati</string>
    <string name="logobottom">Logobottom</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="intro">intro</string>
    <string name="FCM_PREF">com.example.lux.falldetectorstressmonitor.fcm_pref</string>
    <string name="FCM_TOK">com.example.lux.falldetectorstressmonitor.tok_pref</string>
    <string name="registra">Registra</string>
    <string name="et">Età</string>
    <string name="registrazione_assistito">Registrazione Assistito</string>
    <string name="registra_un_nuovo_assistito">Registra Un Nuovo Assistito</string>
    <string name="vai_al_tuo_assistito">Vai Al Tuo Assistito</string>
    <string name="ciao">Ciao</string>
    <string name="frequenza_cardiaca">Frequenza Cardiaca :</string>
    <string name="chiama_ora">Chiama Ora</string>
    <string name="statistiche_del_giorno">Statistiche del Giorno</string>
    <string name="livello_di_stress">Livello Di Stress :</string>
    <string name="cognome_e_nome">Cognome E Nome</string>
    <string name="i_dati_del_tuo_assistito">I Dati Del Tuo Assistito :</string>
    <string name="titoloGraph">Grafici Del Giorno</string>
    <string name="ritmo_cardiaco">Ritmo Cardiaco</string>
    <string name="stress">Stress</string>
    <string name="gsr">GSR</string>
    <string name="bpm">Bpm</string>
    <string name="evento">Evento</string>
    <string name="ora">Ora</string>
    <string name="data">Data</string>
    <string name="togo">TODO</string>
    <string name="eventi_riguardanti_il_tuo_assistito">Eventi Riguardanti Il Tuo Assistito</string>
    <string name="visualizza_eventi">Visualizza Eventi</string>
    <string name="fericit">fericit</string>
    <string name="neutru">neutru</string>
    <string name="stresat">stresat</string>
    <string name="inima">inima</string>
    <string name="bpm1">bpm</string>
    <string name="gsr1">gsr</string>
</resources>
