<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".caregiverAndAssistitoArea"
    android:background="@drawable/background_color"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">


    <TextView
        android:id="@+id/tvSalut"
        android:layout_width="181dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="60dp"
        android:text="@string/ciao"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/i_dati_del_tuo_assistito"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSalut" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:text="@string/cognome_e_nome"
        android:textColor="@color/colorText"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etEta"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="Età :"
        android:textColor="@color/colorText"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvphone"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/etStres"
        android:layout_width="179dp"
        android:layout_height="15dp"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="410dp"
        android:text="@string/livello_di_stress"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/etbpm"
        android:layout_width="179dp"
        android:layout_height="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="410dp"
        android:text="@string/frequenza_cardiaca"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btGraf"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rouded_button"
        android:backgroundTint="#25b9be"
        android:text="@string/statistiche_del_giorno"
        android:textColor="@color/colorText"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEta"
        app:layout_constraintVertical_bias="0.041"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="118dp"
        android:layout_height="152dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="216dp"
        android:contentDescription="@string/logobottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvphone"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosmall" />

    <TextView
        android:id="@+id/tvphone"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/telefono"
        android:textAlignment="textStart"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imfericit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/fericit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStres"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fericit" />

    <ImageView
        android:id="@+id/imneutru"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/neutru"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStres"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/neutru" />

    <ImageView
        android:id="@+id/imstresat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/stresat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStres"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/stresat" />

    <ImageView
        android:id="@+id/iminima"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/inima"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etbpm"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/inima" />

    <TextView
        android:id="@+id/showgsr"
        android:layout_width="100dp"
        android:layout_height="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"

        android:text="@string/gsr1"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imstresat"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/showbpm"
        android:layout_width="100dp"
        android:layout_height="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/bpm1"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iminima" />

</android.support.constraint.ConstraintLayout>