<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".registrazioneCaregiver">
    <EditText
        android:id="@+id/etName"
        android:layout_width="350dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:drawableStart="@drawable/account"
        android:ems="10"
        android:hint="@string/Nome"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="" />

    <EditText
        android:id="@+id/etCognome"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/account"
        android:ems="10"
        android:hint="@string/cognome"
        android:textColorHint="@color/colorHint"
        android:inputType="text"
        android:textColor="@color/colorText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etEma"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/colorHint"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCognome" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/lock"
        android:ems="10"
        android:hint="@string/scegli_password"
        android:textColorHint="@color/colorHint"
        android:inputType="textPassword"
        android:textColor="@color/colorText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEma" />

    <EditText
        android:id="@+id/pula"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ph"
        android:ems="10"
        android:hint="@string/telefono"
        android:textColorHint="@color/colorHint"
        android:inputType="text"
        android:textColor="@color/colorText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="352dp"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rouded_button"
        android:backgroundTint="#194a73"
        android:text="@string/registrati"
        android:textColor="@color/colorHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pula" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="149dp"
        android:layout_height="124dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bRegister"
        app:layout_constraintVertical_bias="0.578"
        app:srcCompat="@drawable/logosmall"
        android:contentDescription="@string/logobottom" />


</android.support.constraint.ConstraintLayout>